--- a/src/modules/internal-mails/components/internal-mails-notifier/styles/themes/_default.scss
+++ b/src/modules/internal-mails/components/internal-mails-notifier/styles/themes/_default.scss
@@ -6,6 +6,7 @@
 
         &__counter {
             position: absolute;
+            top: ef.get-value($themeDefault, 'counterTop');
             right: ef.get-value($themeDefault, 'counterRight');
         }
     }
